// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNotebookInfo returns the correct notebookInfo 1`] = `
Object {
  "jupyter": Object {
    "category": "NOTEBOOK",
    "displayName": "Jupyter",
    "versions": Array [
      Object {
        "displayName": "Dask 2.30.0 support",
        "image": "nerc/jupyterlab:f200ab964cea-dask-2.30.0",
      },
    ],
  },
  "jupyterlab": Object {
    "category": "NOTEBOOK",
    "displayName": "JupyterLab",
    "versions": Array [
      Object {
        "displayName": "Dask 2.30.0 support",
        "image": "nerc/jupyterlab:f200ab964cea-dask-2.30.0",
      },
    ],
  },
  "rstudio": Object {
    "category": "NOTEBOOK",
    "displayName": "RStudio",
    "userSelectableVersion": true,
    "versions": Array [
      Object {
        "connectImage": "nerc/zeppelin-connect:1.1.1",
        "default": true,
        "displayName": "4.0.1",
        "image": "nerc/rstudio:4.0.1",
      },
      Object {
        "connectImage": "nerc/zeppelin-connect:1.1.1",
        "displayName": "3.5.3",
        "image": "nerc/rstudio:3.5.3",
      },
    ],
  },
  "zeppelin": Object {
    "category": "NOTEBOOK",
    "displayName": "Zepplin",
    "versions": Array [
      Object {
        "connectImage": "nerc/zeppelin-connect:1.1.1",
        "displayName": "0.7.2.7",
        "image": "nerc/zeppelin:0.7.2.7",
      },
    ],
  },
}
`;

exports[`getSiteInfo returns the correct siteInfo 1`] = `
Object {
  "nbviewer": Object {
    "category": "SITE",
    "displayName": "NBViewer",
    "versions": Array [
      Object {
        "displayName": "Latest",
        "image": "jupyter/nbviewer:latest",
      },
    ],
  },
  "rshiny": Object {
    "category": "SITE",
    "displayName": "RShiny",
    "userActionOverrides": Object {
      "logs": true,
    },
    "userSelectableVersion": true,
    "versions": Array [
      Object {
        "default": true,
        "displayName": "4.0.1",
        "image": "nerc/rshiny:4.0.1",
      },
      Object {
        "displayName": "3.5.3",
        "image": "nerc/rshiny:3.5.3",
      },
    ],
  },
}
`;

exports[`getUserActionsForType returns all as true if cannot find type 1`] = `
Object {
  "delete": true,
  "edit": true,
  "logs": true,
  "restart": true,
  "share": true,
}
`;

exports[`getUserActionsForType returns to match snapshot for site type with logs userActionOverrides 1`] = `
Object {
  "delete": true,
  "edit": true,
  "logs": true,
  "restart": true,
  "share": true,
}
`;

exports[`getUserActionsForType returns to match snapshot for site type with no logs userActionOverrides 1`] = `
Object {
  "delete": true,
  "edit": true,
  "logs": false,
  "restart": true,
  "share": true,
}
`;

exports[`imageConfig returns the correct configuration 1`] = `
Object {
  "categories": Object {
    "INFRASTRUCTURE": Object {},
    "NOTEBOOK": Object {
      "userActions": Object {
        "delete": true,
        "edit": true,
        "logs": false,
        "restart": true,
        "share": true,
      },
    },
    "SITE": Object {
      "userActions": Object {
        "delete": true,
        "edit": true,
        "logs": false,
        "restart": true,
        "share": true,
      },
    },
  },
  "comment": "THIS FILE IS FOR TESTING PURPOSES ONLY",
  "types": Object {
    "dask": Object {
      "type": "INFRASTRUCTURE",
      "versions": Array [
        Object {
          "image": "daskdev/dask:2.30.0",
        },
      ],
    },
    "jupyter": Object {
      "category": "NOTEBOOK",
      "displayName": "Jupyter",
      "versions": Array [
        Object {
          "displayName": "Dask 2.30.0 support",
          "image": "nerc/jupyterlab:f200ab964cea-dask-2.30.0",
        },
      ],
    },
    "jupyterlab": Object {
      "category": "NOTEBOOK",
      "displayName": "JupyterLab",
      "versions": Array [
        Object {
          "displayName": "Dask 2.30.0 support",
          "image": "nerc/jupyterlab:f200ab964cea-dask-2.30.0",
        },
      ],
    },
    "minio": Object {
      "category": "INFRASTRUCTURE",
      "versions": Array [
        Object {
          "connectImage": "nerc/connect:1.0.0",
          "image": "nerc/minio:1.0",
        },
      ],
    },
    "nbviewer": Object {
      "category": "SITE",
      "displayName": "NBViewer",
      "versions": Array [
        Object {
          "displayName": "Latest",
          "image": "jupyter/nbviewer:latest",
        },
      ],
    },
    "rshiny": Object {
      "category": "SITE",
      "displayName": "RShiny",
      "userActionOverrides": Object {
        "logs": true,
      },
      "userSelectableVersion": true,
      "versions": Array [
        Object {
          "default": true,
          "displayName": "4.0.1",
          "image": "nerc/rshiny:4.0.1",
        },
        Object {
          "displayName": "3.5.3",
          "image": "nerc/rshiny:3.5.3",
        },
      ],
    },
    "rstudio": Object {
      "category": "NOTEBOOK",
      "displayName": "RStudio",
      "userSelectableVersion": true,
      "versions": Array [
        Object {
          "connectImage": "nerc/zeppelin-connect:1.1.1",
          "default": true,
          "displayName": "4.0.1",
          "image": "nerc/rstudio:4.0.1",
        },
        Object {
          "connectImage": "nerc/zeppelin-connect:1.1.1",
          "displayName": "3.5.3",
          "image": "nerc/rstudio:3.5.3",
        },
      ],
    },
    "spark": Object {
      "category": "INFRASTRUCTURE",
      "masterAddress": "spark://spark-master:7077",
      "sharedRLibs": "/data/packages/R/%p/%v",
      "versions": Array [
        Object {
          "image": "nerc/spark-k8s:0.1.0",
        },
      ],
    },
    "zeppelin": Object {
      "category": "NOTEBOOK",
      "displayName": "Zepplin",
      "versions": Array [
        Object {
          "connectImage": "nerc/zeppelin-connect:1.1.1",
          "displayName": "0.7.2.7",
          "image": "nerc/zeppelin:0.7.2.7",
        },
      ],
    },
  },
}
`;
